force-app/main/default/objects/Quote__c/fields/Account_Legacy_System_Cd__c.field-meta.xml
<CustomField>
    <fullName>Account_Legacy_System_Cd__c</fullName>
    <formula>Account__r.Legacy_System_Cd__c</formula>
    <label>Account Legacy System Cd</label>
    <type>Text</type>
</CustomField>