force-app/main/default/objects/Quote__c/fields/Average_Order_Size_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Average_Order_Size_Facilities__c</fullName>
    <description>Selection is to be passed in the GetPrice call for Prospects</description>
    <inlineHelpText>Select the customer&apos;s average order size in the Facilities segment.</inlineHelpText>
    <label>Average Order Size: Facilities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Spend_and_Order_Size</valueSetName>
    </valueSet>
</CustomField>