force-app/main/default/objects/Quote__c/fields/Average_Order_Size_Facilities_Range__c.field-meta.xml
<CustomField>
    <fullName>Average_Order_Size_Facilities_Range__c</fullName>
    <description>Uses custom settings to derive the UI helper values so that a user knows what picklist value to select.</description>
    <formula>IF(ISPICKVAL(Account__r.VOS_Business_Group_Prospect__c,&quot;Saalfeld&quot;),

&quot;For Average Order Size: Facilities: &quot; &amp; BR() &amp;
&quot;Select Low if less than $&quot; &amp; Text($Setup.Prospect_Price_Guidance_Settings__c.FS_Order_Size_Medium_SAAL__c) &amp;br()&amp;
&quot;Select Med if between $&quot; &amp;Text($Setup.Prospect_Price_Guidance_Settings__c.FS_Order_Size_Medium_SAAL__c)&amp; &quot; - $&quot; &amp; Text($Setup.Prospect_Price_Guidance_Settings__c.FS_Order_Size_High_SAAL__c - 1) &amp; br() &amp;
&quot;Select High if greater than $&quot;&amp;Text($Setup.Prospect_Price_Guidance_Settings__c.FS_Order_Size_High_SAAL__c),

&quot;For Average Order Size: Facilities: &quot; &amp; BR() &amp;
&quot;Select Low if less than $&quot; &amp; Text($Setup.Prospect_Price_Guidance_Settings__c.FS_Order_Size_Medium_VRTV__c) &amp;br()&amp;
&quot;Select Med if between $&quot; &amp;Text($Setup.Prospect_Price_Guidance_Settings__c.FS_Order_Size_Medium_VRTV__c)&amp; &quot; - $&quot; &amp; Text($Setup.Prospect_Price_Guidance_Settings__c.FS_Order_Size_High_VRTV__c - 1) &amp; br() &amp;
&quot;Select High if greater than $&quot;&amp;Text($Setup.Prospect_Price_Guidance_Settings__c.FS_Order_Size_High_VRTV__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Select the appropriate amount in the corresponding picklist field.</inlineHelpText>
    <label>Average Order Size: Facilities Range</label>
    <type>Text</type>
</CustomField>