force-app/main/default/objects/Quote__c/fields/Average_Order_Size_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Average_Order_Size_Packaging__c</fullName>
    <description>Selection is to be passed in the GetPrice call for Prospects</description>
    <inlineHelpText>Select the customer&apos;s average order size in Packaging.</inlineHelpText>
    <label>Average Order Size: Packaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>