force-app/main/default/objects/Quote__c/fields/Bill_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Number__c</fullName>
    <formula>Account__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Number</label>
    <type>Text</type>
</CustomField>