force-app/main/default/objects/Quote__c/fields/C360_Count_Created_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>C360_Count_Created_Last_30_Days__c</fullName>
    <description>Returns 1 if the created date was within the last 30 days. Needed for Customer 360 calculation.</description>
    <formula>IF( 
TODAY()- DATEVALUE(CreatedDate) &lt;= 30, 
1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Created Last 30 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>