force-app/main/default/objects/Quote__c/fields/C360_Count_Expired_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>C360_Count_Expired_Last_30_Days__c</fullName>
    <description>Returns 1 if the expiration date is in the past 30 days.</description>
    <formula>IF( 
AND(ISPICKVAL(Quote_Stage__c,&quot;Expired&quot;),TODAY() - C360_WinLossExpired_Date__c &lt;= 30), 
1,0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Expired Last 30 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>