force-app/main/default/objects/Quote__c/fields/C360_Customer_360_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>C360_Customer_360_ID_Formula__c</fullName>
    <description>Lookup to the Account&apos;s Customer 360.</description>
    <formula>Account__r.C360_Customer_360__c</formula>
    <label>Customer 360 ID Formula</label>
    <type>Text</type>
</CustomField>