force-app/main/default/objects/Quote__c/fields/C360_WinLossExpired_Date__c.field-meta.xml
<CustomField>
    <fullName>C360_WinLossExpired_Date__c</fullName>
    <description>This field contains the date that the quote stage last changed</description>
    <inlineHelpText>This field remain blank until the quote stage is changed.</inlineHelpText>
    <label>Quote Stage Change Date</label>
    <type>Date</type>
</CustomField>