force-app/main/default/objects/Quote__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Customer Comments (will print on Quote)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>