force-app/main/default/objects/Quote__c/fields/Confirmed_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Delivery_Date__c</fullName>
    <label>Confirmed Delivery Date</label>
    <type>Date</type>
</CustomField>