force-app/main/default/objects/Quote__c/fields/Count_of_Freight_Lines__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Freight_Lines__c</fullName>
    <description>Counts the number of freight lines on a quote</description>
    <label>Count of Freight Lines</label>
    <summaryFilterItems>
        <field>Quote_Line_Item__c.Product_Code__c</field>
        <operation>contains</operation>
        <value>FREIGHT</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote_Line_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>