force-app/main/default/objects/Quote__c/fields/Count_of_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Line_Items__c</fullName>
    <label>Count of Line Items</label>
    <summaryForeignKey>Quote_Line_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>