force-app/main/default/objects/Quote__c/fields/Customer_Spend_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Customer_Spend_Facilities__c</fullName>
    <description>Sent in the GetPrice call for Price Guidance for prospects.</description>
    <inlineHelpText>Enter the total spend for this customer in the facilities segment.</inlineHelpText>
    <label>Customer Spend: Facilities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Spend_and_Order_Size</valueSetName>
    </valueSet>
</CustomField>