force-app/main/default/objects/Quote__c/fields/Customer_Spend_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Customer_Spend_Packaging__c</fullName>
    <description>Sent in the GetPrice call for Price Guidance for prospects.</description>
    <inlineHelpText>Enter the total spend for this customer in the Packaging Segment</inlineHelpText>
    <label>Customer Spend: Packaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>