force-app/main/default/objects/Quote__c/fields/Customer_Spend_Print_Range__c.field-meta.xml
<CustomField>
    <fullName>Customer_Spend_Print_Range__c</fullName>
    <description>Used to guide in the UI for the picklists that will be sent in the GetPrice call for prospects.</description>
    <formula>IF(ISPICKVAL(Account__r.VOS_Business_Group_Prospect__c,&quot;Saalfeld&quot;), 

&quot;For Customer Spend: Print Range: &quot; &amp; BR() &amp; 
&quot;Select Low if less than $&quot; &amp; Text($Setup.Prospect_Price_Guidance_Settings__c.Print_Avg_Spend_Medium_SAAL__c) &amp;br()&amp; 
&quot;Select Med if between $&quot; &amp;Text($Setup.Prospect_Price_Guidance_Settings__c.Print_Avg_Spend_Medium_SAAL__c)&amp; &quot; - $&quot; &amp; Text($Setup.Prospect_Price_Guidance_Settings__c.Print_Avg_Spend_High_SAAL__c - 1) &amp; br() &amp; 
&quot;Select High if greater than $&quot;&amp;Text($Setup.Prospect_Price_Guidance_Settings__c.Print_Avg_Spend_High_SAAL__c),

&quot;For Customer Spend: Print Range: &quot; &amp; BR() &amp; 
&quot;Select Low if less than $&quot; &amp; Text($Setup.Prospect_Price_Guidance_Settings__c.Print_Avg_Spend_Medium_VRTV__c) &amp;br()&amp; 
&quot;Select Med if between $&quot; &amp;Text($Setup.Prospect_Price_Guidance_Settings__c.Print_Avg_Spend_Medium_VRTV__c)&amp; &quot; - $&quot; &amp; Text($Setup.Prospect_Price_Guidance_Settings__c.Print_Avg_Spend_High_VRTV__c - 1) &amp; br() &amp; 
&quot;Select High if greater than $&quot;&amp;Text($Setup.Prospect_Price_Guidance_Settings__c.Print_Avg_Spend_High_VRTV__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please select the appropriate spend level in the corresponding picklist</inlineHelpText>
    <label>Customer Spend: Print Range</label>
    <type>Text</type>
</CustomField>