force-app/main/default/objects/Quote__c/fields/Date_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Date_Quoted__c</fullName>
    <defaultValue>Today()</defaultValue>
    <inlineHelpText>The date the quote information was given to the customer if different than when entered in SFDC</inlineHelpText>
    <label>Date Quoted</label>
    <type>Date</type>
</CustomField>