force-app/main/default/objects/Quote__c/fields/FOB__c.field-meta.xml
<CustomField>
    <fullName>FOB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOB</label>
    <type>Checkbox</type>
</CustomField>