force-app/main/default/objects/Quote__c/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <label>Internal Comments (will not print)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>