force-app/main/default/objects/Quote__c/fields/Last_Submitted_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Submitted_Timestamp__c</fullName>
    <label>Latest Time Processed for Order</label>
    <type>DateTime</type>
</CustomField>