force-app/main/default/objects/Quote__c/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Quote_Stage__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Additional Follow-up Required</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Customer Lost Job</fullName>
            </value>
            <value>
                <fullName>Lost Relationship</fullName>
            </value>
            <value>
                <fullName>Lost to Competition</fullName>
            </value>
            <value>
                <fullName>Mfg Took Direct</fullName>
            </value>
            <value>
                <fullName>Non-competitive Cost</fullName>
            </value>
            <value>
                <fullName>Price Too High</fullName>
            </value>
            <value>
                <fullName>Product Availability</fullName>
            </value>
            <value>
                <fullName>Product Quality</fullName>
            </value>
            <value>
                <fullName>Quoting Response Time</fullName>
            </value>
            <value>
                <fullName>Veritiv Performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>