force-app/main/default/objects/Quote__c/fields/Lost_Reason_Comments__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Comments__c</fullName>
    <label>Lost Reason Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>