force-app/main/default/objects/Quote__c/fields/Merchandising_Servicing_Division__c.field-meta.xml
<CustomField>
    <fullName>Merchandising_Servicing_Division__c</fullName>
    <formula>BLANKVALUE( Ship_To__r.Legacy_Division_Desc__c , Account__r.Primary_Sales_Rep_Name__r.SF_userid__r.Default_Servicing_Division__c)</formula>
    <label>Merchandising Servicing Division</label>
    <type>Text</type>
</CustomField>