force-app/main/default/objects/Quote__c/fields/Number_of_Orders_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Orders_Submitted__c</fullName>
    <label>Total Times Processed for Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>