force-app/main/default/objects/Quote__c/fields/Order_Processed_Set_Automatically__c.field-meta.xml
<CustomField>
    <fullName>Order_Processed_Set_Automatically__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Processed Set Automatically</label>
    <type>Checkbox</type>
</CustomField>