force-app/main/default/objects/Quote__c/fields/Order_Request_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Order_Request_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Request Submitted</label>
    <type>Checkbox</type>
</CustomField>