force-app/main/default/objects/Quote__c/fields/Order_Request_Submitted_Pklst__c.field-meta.xml
<CustomField>
    <fullName>Order_Request_Submitted_Pklst__c</fullName>
    <label>Order Processed?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Quote_Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Being submitted again</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>