force-app/main/default/objects/Quote__c/fields/Order_Source__c.field-meta.xml
<CustomField>
    <fullName>Order_Source__c</fullName>
    <label>Order Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Customer Call</fullName>
            </value>
            <value>
                <fullName>Postal Mail</fullName>
            </value>
            <value>
                <fullName>Email from Customer</fullName>
            </value>
            <value>
                <fullName>Email from Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>