force-app/main/default/objects/Quote__c/fields/Order_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Order_Submitted__c</fullName>
    <formula>IF(ISBLANK(Last_Submitted_Timestamp__c),&quot;FALSE&quot;,&quot;TRUE&quot;)</formula>
    <label>Order Submitted?</label>
    <type>Text</type>
</CustomField>