force-app/main/default/objects/Quote__c/fields/PO_Reqd__c.field-meta.xml
<CustomField>
    <fullName>PO_Reqd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BW-2012 Maps from account</description>
    <label>PO Reqd</label>
    <type>Checkbox</type>
</CustomField>