force-app/main/default/objects/Quote__c/fields/PO_Required__c.field-meta.xml
<CustomField>
    <fullName>PO_Required__c</fullName>
    <label>PO_Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>