force-app/main/default/objects/Quote__c/fields/Potential_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Potential_Order_Type__c</fullName>
    <label>Potential Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>