force-app/main/default/objects/Quote__c/fields/Primary_Merchandising_Segment__c.field-meta.xml
<CustomField>
    <fullName>Primary_Merchandising_Segment__c</fullName>
    <label>Primary Merchandising Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Facility Solutions</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>