force-app/main/default/objects/Quote__c/fields/Primary_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Primary Sales Rep
When a new Quote is created from an Account or Opportunity Record, the Primary Sales Rep field is pre-populated (but editable) with the Primary Sales Rep tied to the related Account
When a new Quote is created from an Opportunity, the Primary Sales Rep field on the Quote object is pre-populated with the Primary Sales Rep from the Opportunity’s related Account, regardless of the Primary Sales Rep listed on the Opportunity. 
When a new Quote is created from a Contact, the Primary Sales Rep field on the Quote object is pre-populated with the Primary Sales Rep from the Contact’s related Account record, regardless of the Primary Sales Rep listed on the Contact. 
When a Quote is cloned, the new Quote’s Primary Sales Rep field on the new cloned Quote is pre-populated with the Primary Sales Rep from the Quote it was cloned from</description>
    <label>Primary Sales Rep</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>