force-app/main/default/objects/Quote__c/fields/Primary_Sales_Rep_Formula__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Rep_Formula__c</fullName>
    <description>Primary_Sales_Rep_Formula - old cross obj formula</description>
    <formula>Account__r.Primary_Sales_Rep_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Sales Rep Formula</label>
    <type>Text</type>
</CustomField>