force-app/main/default/objects/Quote__c/fields/Print_Quote_Totals__c.field-meta.xml
<CustomField>
    <fullName>Print_Quote_Totals__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Print Quote Totals</label>
    <type>Checkbox</type>
</CustomField>