force-app/main/default/objects/Quote__c/fields/Quote_Stage__c.field-meta.xml
<CustomField>
    <fullName>Quote_Stage__c</fullName>
    <label>Quote Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <color>#E27001</color>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
                <color>#66E9BD</color>
                <label>Submitted for Approval</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <color>#F96FB7</color>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Sent to Customer</fullName>
                <color>#0B6FCE</color>
                <label>Sent to Customer</label>
            </value>
            <value>
                <fullName>Lost</fullName>
                <color>#CC0000</color>
                <label>Lost</label>
            </value>
            <value>
                <fullName>Won</fullName>
                <color>#009900</color>
                <label>Won</label>
            </value>
            <value>
                <fullName>Returned From Field Sourcing</fullName>
                <color>#641CCF</color>
                <label>Returned From Field Sourcing</label>
            </value>
            <value>
                <fullName>Expired</fullName>
                <color>#8F6429</color>
                <label>Expired</label>
            </value>
            <value>
                <fullName>Requires Additional Follow-up</fullName>
                <color>#CC33CC</color>
                <label>Requires Additional Follow-up</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>