force-app/main/default/objects/Quote__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fast job</fullName>
            </value>
            <value>
                <fullName>Long bid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>