force-app/main/default/objects/Quote__c/fields/QuotesCounter__c.field-meta.xml
<CustomField>
    <fullName>QuotesCounter__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quotes Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>